# pixiv-novel-sync

./: .env.example  .gitignore  KNOWLEDGE_GRAPH.md  LICENSE  README.md  deploy.sh  pyproject.toml  update.sh
assets/: logo-design.md
config/: config.yaml  config.yaml.example
docs/: AI_WRITING_STUDIO_PLAN.md  API.md  API_COMPLETE.md  AUDIT_REPORT.md  AUDIT_REPORT_2026-07-02.md  AUDIT_REPORT_2026-07-03.md  BUGS_FIXED_REPORT.md  COMPLETION_REPORT.md  CRITICAL_BUGS_FIX_PLAN.md  EXECUTIVE_SUMMARY.md  FINAL_SUMMARY_20260610.md  GIT_COMMIT_GUIDE.md  IMPLEMENTATION_RECORD.md  INDEX.md  MANAGER_EXTRACTION_COMPLETE.md  MODULARIZATION_COMPLETE.md  OPTIMIZATION_REVIEW_2026-06-26.md  OPTIMIZATION_ROADMAP.md  PREFERENCE_RECOMMENDER_REQUIREMENTS.md  PRIORITY_ROADMAP.md  PROJECT_ANALYSIS_REPORT.md  QWEN_EMBEDDING_INTEGRATION.md  REFACTOR_MASTER_PLAN.md  REFACTOR_STATUS.md  SESSION_REPORT_2026-06-10.md  SESSION_SUMMARY_20260610.md  TODO_PHASE_7.6.md  frontend-api-contract.md  frontend-pages.md  library-os-style-guide.md
scripts/: clear-cache.sh  install_server.sh
tests/: conftest.py  test_ai_import_atomicity.py  test_ai_page_routes.py  test_ai_project_covers.py  test_ai_prompts.py  test_ai_providers_fallback.py  test_ai_retrieval.py  test_ai_security_hardening.py  test_ai_service.py  test_ai_service_facade.py  test_ai_service_parsing.py  test_ai_service_provider_cache.py  test_ai_service_stream_continue.py  test_ai_web_int_parsing.py  test_ai_web_stream.py  test_archive_integrity.py  test_cli_jobs.py  test_cron_validation.py  test_dashboard_novels_api.py  test_deployment_config.py  (+34 more)
(+122 files in other folders)
